k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-acc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmos-acc-service
  template:
    metadata:
      labels:
        app: cosmos-acc-service
    spec:
      containers:
        - name: cosmos-acc-service
          image: amdevops36/cosmos-acc-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: cosmos-acc-service
  labels:
    app: cosmos-acc-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 8083
  selector:
    app: cosmos-acc-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmos-acc-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cosmos-acc-swagger
            pathType: Prefix
            backend:
              service:
                name: cosmos-acc-service
                port:
                  number: 8083
          - path: /ACC-API
            pathType: Prefix
            backend:
              service:
                name: cosmos-acc-service
                port:
                  number: 8083
          - path: /cosmos-acc-swagger
            pathType: Prefix
            backend:
              service:
                name: cosmos-acc-service
                port:
                  number: 8083

          - path: /cosmos-acc-openapi
            pathType: Prefix
            backend:
              service:
                name: cosmos-acc-service
                port:
                  number: 8083
